@@ -156,8 +156,6 @@ void BATmsync(BAT *b);
 gdk_return BATmultiprintf(stream *f, int argc, BAT *argv[], int printoid, int order, int printorderby);
 int BATname(BAT *b, const char *nme);
 BAT *BATnew(int hdtype, int tltype, BUN capacity, int role) __attribute__((warn_unused_result));
-gdk_return BATorder(BAT *b);
-gdk_return BATorder_rev(BAT *b);
 int BATordered(BAT *b);
 int BATordered_rev(BAT *b);
 BAT *BATouterjoin(BAT *l, BAT *r, BUN estimate);
@@ -883,8 +881,6 @@ str BKCisTransient(bit *res, const bat *bid);
 str BKCmergecand(bat *ret, const bat *aid, const bat *bid);
 str BKCmirror(bat *ret, const bat *bid);
 str BKCnewBAT(bat *res, const int *ht, const int *tt, const BUN *cap, int role);
-str BKCorder(bat *ret, const bat *bid);
-str BKCorder_rev(bat *ret, const bat *bid);
 str BKCpersists(void *r, const bat *bid, const bit *flg);
 str BKCreuseBAT(bat *ret, const bat *bid, const bat *did);
 str BKCreuseBATmap(bat *ret, const bat *bid, const bat *did);
