@@ -87,30 +87,28 @@ end user.main;
 [ 46@0,	"new_persistent",	"pattern",	"bat",	"(ht:oid,tt:any_1,size:lng):bat[:oid,:any_1] ",	"CMDBATnew;"  ]
 [ 47@0,	"new_persistent",	"pattern",	"bat",	"(ht:oid,tt:any_1,size:int):bat[:oid,:any_1] ",	"CMDBATnew;"  ]
 [ 48@0,	"new_persistent",	"pattern",	"bat",	"(ht:oid,tt:any_1):bat[:oid,:any_1] ",	"CMDBATnew;"  ]
-[ 49@0,	"order",	"command",	"bat",	"(b:bat[:oid,:any_1]):bat[:oid,:any_1] ",	"BKCorder_rev;"  ]
-[ 50@0,	"orderReverse",	"command",	"bat",	"(b:bat[:oid,:any_1]):bat[:oid,:any_1] ",	"BKCorder;"  ]
-[ 51@0,	"partition",	"pattern",	"bat",	"(b:bat[:oid,:any_1],pieces:int,n:int):bat[:oid,:any_1] ",	"CMDBATpartition2;"  ]
-[ 52@0,	"partition",	"pattern",	"bat",	"(b:bat[:oid,:any_1]):bat[:oid,:any_1]... ",	"CMDBATpartition;"  ]
-[ 53@0,	"replace",	"command",	"bat",	"(b:bat[:oid,:any_1],del:bat[:oid,:oid]):bat[:oid,:oid] ",	"BKCreuseBATmap;"  ]
-[ 54@0,	"replace",	"command",	"bat",	"(b:bat[:oid,:any_1],del:bat[:oid,:oid]):bat[:oid,:any_1] ",	"BKCreuseBAT;"  ]
-[ 55@0,	"replace",	"command",	"bat",	"(b:bat[:oid,:any_1],rid:bat[:oid,:oid],val:bat[:oid,:any_1],force:bit):bat[:oid,:any_1] ",	"BKCbat_inplace_force;"  ]
-[ 56@0,	"replace",	"command",	"bat",	"(b:bat[:oid,:any_1],rid:bat[:oid,:oid],val:bat[:oid,:any_1]):bat[:oid,:any_1] ",	"BKCbat_inplace;"  ]
-[ 57@0,	"reuse",	"command",	"bat",	"(b:bat[:oid,:any_1],h:oid,t:any_1,force:bit):bat[:oid,:any_1] ",	"BKCbun_inplace_force;"  ]
-[ 58@0,	"reuseMap",	"command",	"bat",	"(b:bat[:oid,:any_1],h:oid,t:any_1):bat[:oid,:any_1] ",	"BKCbun_inplace;"  ]
-[ 59@0,	"reverse",	"command",	"bat",	"(b:bat[:any_1,:any_2]):bat[:any_2,:any_1] ",	"BKCreverse;"  ]
-[ 60@0,	"save",	"pattern",	"bat",	"(val:any_1):bat[:oid,:any_1] ",	"CMDBATsingle;"  ]
-[ 61@0,	"save",	"command",	"bat",	"(b:bat[:oid,:any_1]):bit ",	"BKCsetImprints;"  ]
-[ 62@0,	"setAccess",	"command",	"bat",	"(b:bat[:oid,:any_1]):bit ",	"BKCsetHash;"  ]
-[ 63@0,	"setColumn",	"command",	"bat",	"(nme:str):bit ",	"BKCsave;"  ]
-[ 64@0,	"setColumn",	"command",	"bat",	"(nme:bat[:oid,:any_1]):void ",	"BKCsave2;"  ]
-[ 65@0,	"setHash",	"command",	"bat",	"(b:bat[:oid,:any_1]):void ",	"BKCsetPersistent;"  ]
-[ 66@0,	"setImprints",	"command",	"bat",	"(b:bat[:oid,:any_1]):void ",	"BKCsetTransient;"  ]
-[ 67@0,	"setKey",	"command",	"bat",	"(b:bat[:oid,:any_1],h:str,t:str):void ",	"BKCsetColumns;"  ]
-[ 68@0,	"setName",	"command",	"bat",	"(b:bat[:oid,:any_1],t:str):void ",	"BKCsetColumn;"  ]
-[ 69@0,	"setPersistent",	"command",	"bat",	"(b:bat[:oid,:any_1],h:str,t:str):void ",	"BKCsetRole;"  ]
-[ 70@0,	"setRole",	"command",	"bat",	"(b:bat[:oid,:any_1],s:str):void ",	"BKCsetName;"  ]
-[ 71@0,	"setTransient",	"command",	"bat",	"(b:bat[:oid,:any_1],mode:str):bat[:oid,:any_1] ",	"BKCsetAccess;"  ]
-[ 72@0,	"single",	"command",	"bat",	"(b:bat[:oid,:any_1],mode:bit):bat[:oid,:any_1] ",	"BKCsetkey;"  ]
+[ 49@0,	"partition",	"pattern",	"bat",	"(b:bat[:oid,:any_1],pieces:int,n:int):bat[:oid,:any_1] ",	"CMDBATpartition2;"  ]
+[ 50@0,	"partition",	"pattern",	"bat",	"(b:bat[:oid,:any_1]):bat[:oid,:any_1]... ",	"CMDBATpartition;"  ]
+[ 51@0,	"replace",	"command",	"bat",	"(b:bat[:oid,:any_1],del:bat[:oid,:oid]):bat[:oid,:oid] ",	"BKCreuseBATmap;"  ]
+[ 52@0,	"replace",	"command",	"bat",	"(b:bat[:oid,:any_1],del:bat[:oid,:oid]):bat[:oid,:any_1] ",	"BKCreuseBAT;"  ]
+[ 53@0,	"replace",	"command",	"bat",	"(b:bat[:oid,:any_1],rid:bat[:oid,:oid],val:bat[:oid,:any_1],force:bit):bat[:oid,:any_1] ",	"BKCbat_inplace_force;"  ]
+[ 54@0,	"replace",	"command",	"bat",	"(b:bat[:oid,:any_1],rid:bat[:oid,:oid],val:bat[:oid,:any_1]):bat[:oid,:any_1] ",	"BKCbat_inplace;"  ]
+[ 55@0,	"reuse",	"command",	"bat",	"(b:bat[:oid,:any_1],h:oid,t:any_1,force:bit):bat[:oid,:any_1] ",	"BKCbun_inplace_force;"  ]
+[ 56@0,	"reuseMap",	"command",	"bat",	"(b:bat[:oid,:any_1],h:oid,t:any_1):bat[:oid,:any_1] ",	"BKCbun_inplace;"  ]
+[ 57@0,	"reverse",	"command",	"bat",	"(b:bat[:any_1,:any_2]):bat[:any_2,:any_1] ",	"BKCreverse;"  ]
+[ 58@0,	"save",	"pattern",	"bat",	"(val:any_1):bat[:oid,:any_1] ",	"CMDBATsingle;"  ]
+[ 59@0,	"save",	"command",	"bat",	"(b:bat[:oid,:any_1]):bit ",	"BKCsetImprints;"  ]
+[ 60@0,	"setAccess",	"command",	"bat",	"(b:bat[:oid,:any_1]):bit ",	"BKCsetHash;"  ]
+[ 61@0,	"setColumn",	"command",	"bat",	"(nme:str):bit ",	"BKCsave;"  ]
+[ 62@0,	"setColumn",	"command",	"bat",	"(nme:bat[:oid,:any_1]):void ",	"BKCsave2;"  ]
+[ 63@0,	"setHash",	"command",	"bat",	"(b:bat[:oid,:any_1]):void ",	"BKCsetPersistent;"  ]
+[ 64@0,	"setImprints",	"command",	"bat",	"(b:bat[:oid,:any_1]):void ",	"BKCsetTransient;"  ]
+[ 65@0,	"setKey",	"command",	"bat",	"(b:bat[:oid,:any_1],h:str,t:str):void ",	"BKCsetColumns;"  ]
+[ 66@0,	"setName",	"command",	"bat",	"(b:bat[:oid,:any_1],t:str):void ",	"BKCsetColumn;"  ]
+[ 67@0,	"setPersistent",	"command",	"bat",	"(b:bat[:oid,:any_1],h:str,t:str):void ",	"BKCsetRole;"  ]
+[ 68@0,	"setRole",	"command",	"bat",	"(b:bat[:oid,:any_1],s:str):void ",	"BKCsetName;"  ]
+[ 69@0,	"setTransient",	"command",	"bat",	"(b:bat[:oid,:any_1],mode:str):bat[:oid,:any_1] ",	"BKCsetAccess;"  ]
+[ 70@0,	"single",	"command",	"bat",	"(b:bat[:oid,:any_1],mode:bit):bat[:oid,:any_1] ",	"BKCsetkey;"  ]
 
 # 08:55:30 >  
 # 08:55:30 >  Done.
